--- a/blog.html
+++ b/blog.html
@@ -284,7 +284,7 @@ La landing page de la campaña de adopción, muestra en tiempo real quién en to
                   <div class="col-lg-3 col-md-6 footer-links">
                       <h4>Links utiles</h4>
                       <ul>
-                          <li><a href="#">Terminos de servicios</a></li>
+                          <li><a href="#">Términos y condiciones</a></li>
                           <li><a href="#">Política de privacidad</a></li>
                           <li><a href="#">Cookies</a></li>
                       </ul>
