--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Links utiles</h4>
                     <ul>
-                        <li><a href="#">Terminos de servicios</a></li>
+                        <li><a href="#">Términos y condiciones</a></li>
                         <li><a href="#">Política de privacidad</a></li>
                         <li><a href="#">Cookies</a></li>
                     </ul>
